k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-portfolio
  labels:
    name: stock-portfolio
    app: stock-portfolio
